# pyenv_julia

./: README.md  dockerfile  postCreateCommand.sh  pyproject.toml
.devcontainer/: devcontainer.json
example01/: Project.toml  routes.jl
example01/public/: sample.html  table.html
example01/public/css/genie/: acordion.css  acordion2.css  color.css  drop.css  filter.css  header.css  table.css
example01/public/js/genie/: acordion2.js  color.js  drop.js  filter.js
main/: julia.jl
